3rd_homework_1 revision 1

--- a/03-homework/homework03.ipynb
+++ b/03-homework/homework03.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "id": "235d2792",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "id": "ba475a33",
    "metadata": {},
    "outputs": [
@@ -130,7 +130,7 @@
        "4     self_employed         europe                  3        0.62          1  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 24,
    "id": "989f95f5",
    "metadata": {},
    "outputs": [
@@ -275,7 +275,7 @@
        "converted                             1  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 25,
    "id": "e3a90b86",
    "metadata": {},
    "outputs": [
@@ -305,7 +305,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 26,
    "id": "ec529af2",
    "metadata": {},
    "outputs": [
@@ -335,7 +335,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -389,7 +389,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>industry</th>\n",
-       "      <td>na</td>\n",
+       "      <td>NA</td>\n",
        "      <td>retail</td>\n",
        "      <td>healthcare</td>\n",
        "      <td>retail</td>\n",
@@ -416,7 +416,7 @@
        "      <td>unemployed</td>\n",
        "      <td>employed</td>\n",
        "      <td>unemployed</td>\n",
-       "      <td>na</td>\n",
+       "      <td>NA</td>\n",
        "      <td>self_employed</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -458,10 +458,10 @@
       "text/plain": [
        "                                      0              1           2          3  \\\n",
        "lead_source                    paid_ads   social_media      events   paid_ads   \n",
-       "industry                             na         retail  healthcare     retail   \n",
+       "industry                             NA         retail  healthcare     retail   \n",
        "number_of_courses_viewed              1              1           5          2   \n",
        "annual_income                   79450.0        46992.0     78796.0    83843.0   \n",
-       "employment_status            unemployed       employed  unemployed         na   \n",
+       "employment_status            unemployed       employed  unemployed         NA   \n",
        "location                  south_america  south_america   australia  australia   \n",
        "interaction_count                     4              1           3          1   \n",
        "lead_score                         0.94            0.8        0.69       0.87   \n",
@@ -536,7 +536,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_3849/3537477206.py:1: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "/tmp/ipykernel_2300/3537477206.py:1: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
       "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
       "\n",
       "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
@@ -572,11 +572,385 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "0f95da5f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "df_full_train, df_test = train_test_split(df, test_size=0.2, random_state=42)\n",
+    "df_train, df_val = train_test_split(df_full_train,test_size=0.25, random_state=42) #20% of the orignal df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "284dd469",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_train= df_train.reset_index(drop= True)\n",
+    "df_val= df_val.reset_index(drop= True)\n",
+    "df_test= df_test.reset_index(drop= True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "a47f0f10",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_train=df_train.converted.values\n",
+    "y_val=df_val.converted.values\n",
+    "y_test=df_test.converted.values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "c713456d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "del df_train['converted']\n",
+    "del df_val['converted']\n",
+    "del df_test['converted']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "8429c859",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "converted\n",
+       "1    0.607357\n",
+       "0    0.392643\n",
+       "Name: proportion, dtype: float64"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_full_train.converted.value_counts(normalize=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "8db5c386",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "industry\n",
+       "finance          0.142857\n",
+       "retail           0.142002\n",
+       "other            0.132592\n",
+       "healthcare       0.128315\n",
+       "education        0.122327\n",
+       "manufacturing    0.119760\n",
+       "technology       0.115483\n",
+       "NA               0.096664\n",
+       "Name: proportion, dtype: float64"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_full_train.industry.value_counts(normalize=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "0b80b089",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "industry\n",
+       "retail           0.142694\n",
+       "finance          0.141553\n",
+       "healthcare       0.133562\n",
+       "other            0.133562\n",
+       "manufacturing    0.124429\n",
+       "education        0.121005\n",
+       "technology       0.114155\n",
+       "NA               0.089041\n",
+       "Name: proportion, dtype: float64"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_train.industry.value_counts(normalize=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "4b2cfa5f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['number_of_courses_viewed',\n",
+       " 'annual_income',\n",
+       " 'interaction_count',\n",
+       " 'lead_score',\n",
+       " 'converted']"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "numerical_columns = list(df.dtypes[df.dtypes != 'object'].index)\n",
+    "numerical_columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "6f5395c0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "number_of_courses_viewed    0.442068\n",
+       "annual_income               0.029612\n",
+       "interaction_count           0.378482\n",
+       "lead_score                  0.225641\n",
+       "converted                   1.000000\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_full_train[numerical_columns].corrwith(df_full_train.converted)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "a8ad359c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>number_of_courses_viewed</th>\n",
+       "      <th>annual_income</th>\n",
+       "      <th>interaction_count</th>\n",
+       "      <th>lead_score</th>\n",
+       "      <th>converted</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>number_of_courses_viewed</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.009770</td>\n",
+       "      <td>-0.023565</td>\n",
+       "      <td>-0.004879</td>\n",
+       "      <td>0.435914</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>annual_income</th>\n",
+       "      <td>0.009770</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.027036</td>\n",
+       "      <td>0.015610</td>\n",
+       "      <td>0.053131</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>interaction_count</th>\n",
+       "      <td>-0.023565</td>\n",
+       "      <td>0.027036</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.009888</td>\n",
+       "      <td>0.374573</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>lead_score</th>\n",
+       "      <td>-0.004879</td>\n",
+       "      <td>0.015610</td>\n",
+       "      <td>0.009888</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.193673</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>converted</th>\n",
+       "      <td>0.435914</td>\n",
+       "      <td>0.053131</td>\n",
+       "      <td>0.374573</td>\n",
+       "      <td>0.193673</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                          number_of_courses_viewed  annual_income  \\\n",
+       "number_of_courses_viewed                  1.000000       0.009770   \n",
+       "annual_income                             0.009770       1.000000   \n",
+       "interaction_count                        -0.023565       0.027036   \n",
+       "lead_score                               -0.004879       0.015610   \n",
+       "converted                                 0.435914       0.053131   \n",
+       "\n",
+       "                          interaction_count  lead_score  converted  \n",
+       "number_of_courses_viewed          -0.023565   -0.004879   0.435914  \n",
+       "annual_income                      0.027036    0.015610   0.053131  \n",
+       "interaction_count                  1.000000    0.009888   0.374573  \n",
+       "lead_score                         0.009888    1.000000   0.193673  \n",
+       "converted                          0.374573    0.193673   1.000000  "
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[numerical_columns].corr()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "c05ac9d3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import mutual_info_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "4962c67d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.011684562750165564"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mutual_info_score(df_full_train.converted, df_full_train.industry)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "26c1a4f0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0022530354195563346"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mutual_info_score(df_full_train.converted, df_full_train.location)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "3e8bb30e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.025665373935054955"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mutual_info_score(df_full_train.converted, df_full_train.lead_source)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "2a959d77",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.013258496589914293"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mutual_info_score(df_full_train.converted, df_full_train.employment_status)"
+   ]
   }
  ],
  "metadata": {
